src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>CreatedBy.Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>CreatedBy.Contact.Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>type of application customer inquired about</description>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Animal Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management, Tracking, &amp; Movement (owned by the company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bag Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Scanning &amp; Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Labeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coupon/Voucher Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Docking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document &amp; Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Labels (Out of Stock, Aisles Signs, Layaway Bins, Oil Change)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Management, Tracking, &amp; Movement (product of the company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty &amp; Membership Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordering, Order Entry, Order Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Identification, Movement, Access Control, and Authorization/Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Pharmacy Labeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receiving/Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Logistics, Merchandise Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Specimen &amp; Biologics Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stored Value &amp; Gift Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticketing/Citations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Application Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Support Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Requalification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Application Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller On-Boarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>It captures details about the task</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Direction__c</fullName>
        <description>This field shows from where this communication is originating</description>
        <label>Communication Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>It capture the completion date for the assigned task</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite/Face-to-Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Feedback_c__c</fullName>
        <description>Enter feedback given by the customer relating to this activity</description>
        <label>Customer Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Assessment__c</fullName>
        <description>Sales Team member assessment of overall event</description>
        <inlineHelpText>Sales Team member assessment of overall event</inlineHelpText>
        <label>Event Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Exceeded Expections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Met Expections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not meet Expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <picklist>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Topics__c</fullName>
        <description>identify topics and/or gaps required for the event</description>
        <inlineHelpText>identify topics and/or gaps required for the event</inlineHelpText>
        <label>Event Topics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hours_Spent__c</fullName>
        <label>Hours Spent</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_Action_Items__c</fullName>
        <description>Enter notes and or action items from the event</description>
        <inlineHelpText>Create sepearate tasks for each action item resulting from the event</inlineHelpText>
        <label>Notes/Action Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>This field will automatically populate when &quot;Other&quot; is selected under category.</description>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial number sent to the customer for the demo</description>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>select the appropriate stage</description>
        <inlineHelpText>select the appropriate stage</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Analysis/Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agenda Defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resources Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered/Completed/Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surveys Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied/Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>